# ToDoIt-FAST

./: .gitignore  README.md  main.py  pyproject.toml  services.py
config/: settings.py
database/migrations/: 0001_initial.py
routers/: todo.py
schemas/: todo.py
