[project]
name = "todoapp"
version = "0.1.0"
description = ""
authors = [
    {name = "ahMAD ASSadi",email = "ds1380ahmad@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymongo (>=4.12.1,<5.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "motor (>=3.7.0,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "mongoengine (>=0.29.1,<0.30.0)",
    "redis[asyncio] (>=6.0.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
